@@ -283,8 +283,13 @@ public class KEmulatorUpdater implements Runnable {
 			cmd.add("java.desktop/com.sun.media.sound=ALL-UNNAMED");
 			cmd.add("--add-opens");
 			cmd.add("java.desktop/javax.sound.midi=ALL-UNNAMED");
-			if (getJavaVersionMajor() >= 17)
+			if (getJavaVersionMajor() >= 17) {
 				cmd.add("--enable-native-access=ALL-UNNAMED");
+				cmd.add("-XX:+UseZGC");
+			}
+		} else {
+			cmd.add("-XX:+UseG1GC");
+			cmd.add("-XX:MaxGCPauseMillis=50");
 		}
 
 		cmd.add("emulator.Emulator");
